# lying-style-nlp-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md  download_datasets.py
datasets/samples/: counterfact_sample.json  fever_nli_sample.json  liar_sample.json  truthfulqa_sample.json
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: LLM_lying_deception_detection_text_distribution_20260320_202113.jsonl
papers/: README.md
papers/pages/: 2304.13734_Internal_State_LLM_Knows_Lying_manifest.txt  2412.17128_Lies_Damned_Lies_manifest.txt  (+7 more)
results/: bootstrap_results.csv  classification_results.csv  config.json  cross_model_comparison.csv  descriptive_stats.csv  feature_importances.csv  features.csv  gpt41_stats.csv  gpt4omini_stats.csv  js_divergence.csv  js_divergence_bootstrap.csv  overall_tests.csv  paired_corpus.json  paired_corpus_gpt4omini.json  per_condition_classification.csv  qualitative_examples.json  statistical_tests.csv  summary.json
src/: analyze_corpus.py  analyze_robust.py  generate_corpus.py  generate_corpus_model2.py  generate_corpus_openrouter.py
